# again prettified overall simulator tab style: fixing heights and scrolling, wrapping table # extracted column header event handling into separate functions

--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,7 @@ textarea {
 }
 
 .properties {
+    position: relative;
     width: 275px;
     overflow-y: auto;
     overflow-x: hidden;
