--- a/js/simulator/view/simulator.css
+++ b/js/simulator/view/simulator.css
@@ -5,6 +5,9 @@
 
 #simulatorContainer {
     width: 100%;
+    position: absolute;
+    top: 30px;
+    bottom: 0px;
 }
 
 #simulatorHeader {
@@ -29,7 +32,7 @@
 }
 
 #simulationToolbar {
-    position: relative;
+    position: absolute;
     bottom: 0px;
     width: 100%;
     height: 50px;
