--- a/js/simulator/view/timeline.css
+++ b/js/simulator/view/timeline.css
@@ -1,6 +1,7 @@
 #timelineContainer {
-    position: relative;
-    bottom: 0px;
+    position: absolute;
+    top: 60px;
+    bottom: 90px;
     width: 100%;
     overflow: auto;
     padding: 10px 10px 20px;
@@ -9,9 +10,17 @@
     background-color: white;
 }
 
-
 #timelineName {
     cursor: default;
+}
+
+#timelineTableWindow {
+    position: absolute;
+    width: 100%;
+    top: 50px;
+    bottom: 0px;
+    right: 0px;
+    overflow: auto;
 }
 
 table#timelineTable,
@@ -30,17 +39,17 @@ table#timelineTable
     width: 100%;
     height: 100%;
     text-align: center;
-    margin-top: 20px;
 }
 
-table#timelineTable thead tr.timeline-header th
+table#timelineTable thead tr.timeline-header th:not(.timeline-step-label)
 {
     text-align: center;
     border: 1px dotted lightgrey;
 }
-table#timelineTable thead tr.timeline-header th:first-of-type
+table#timelineTable thead tr.timeline-header th:not(.timeline-step-label) .caret
 {
-    border: none;
+    color: lightgrey;
+    font-size: small;
 }
 
 table#timelineTable tr.timeline-step
